--- a/_posts/2018-03-08-8.html
+++ b/_posts/2018-03-08-8.html
@@ -6,7 +6,7 @@ label1: Spotted Towhee <br> Vancouver, BC -- HNE
 label2: Sassafrass <I>Sassafras albidum</I> <br> Princeton, NJ -- AME
 image1: https://farm5.staticflickr.com/4775/25827968367_56f04572fd_o.jpg
 mouse1: Even when it rains, the towhee sings. Be like the towhee. 
-image2:  ../../../assets/sass.jpeg
+image2:  /assets/sass.jpeg
 mouse2: Branches blown down from the storm. Buds bound to dormancy.
 ---
 
