Adding random button

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ layout: last
 <body>
 <div id="topContainer">
 <div id="topLeft">
-<span><a href="http://eyster.com/"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span>
+<span><a href="http://fieldnotes.eyster.com/"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span>
 
 </div>
 <div id="topRight">
-<div id="slogan">
-<span><a href="http://eyster.com/"><img src="../../../assets/profile.png" alt="Eyster picture" height="83" width="185"></a></span>
+<div id="masthead">
+<span><a href="http://fieldnotes.eyster.com/"><img src="../../../assets/profile.png" alt="Eyster picture" height="83" width="185"></a></span>
 <span id="slogan">Sketches of the nature <br> we see around us.</span>
 </div>
 <div id="news">
@@ -49,7 +49,7 @@ Eyster Field Notes updates every day, unless we're in the field.
 <ul class="comicNav">
 <li><a href="./1">|&lt;</a></li>
 <li><a rel="prev" href= "./{{ post.number| minus: 1}}" accesskey="p">&lt; Prev</a></li>
-<!-- <li><a href="http://nature.eyster.com/random/note">Random</a></li> -->
+<li><a href="../random">Random</a></li> 
 <li><a rel="next" href= "./" accesskey="p"> Next &gt;</a></li>
 <li><a href="./">&gt;|</a></li>
 </ul>
