3/9 and about page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: last
 <body>
 <div id="topContainer">
 <div id="topLeft">
-<span><a href="http://fieldnotes.eyster.com/"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span>
+<span><a href="http://fieldnotes.eyster.com/about"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span>
 
 </div>
 <div id="topRight">
@@ -78,7 +78,7 @@ Eyster Field Notes updates every day, unless we're in the field.
 
 <div id="licenseText">
 <p>
-&copy Harold Eyster/Artemis Eyster
+&copy Harold Eyster/Artemis Eyster | <a href="./about" >About</a> | <a href="https://twitter.com/HaroldEyster" >Twitter</a> | <a href="https://instagram.com/eysterart" >Instagram</a> 
 <!-- <a href="http://creativecommons.org/licenses/by-nc/2.5/">Creative Commons Attribution-NonCommercial 2.5 License</a>. -->
 </p>
 </div>
