--- a/about.html
+++ b/about.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
 
-<link rel="stylesheet" type="text/css" href="../assets/about.css" title="about">
-<title>Eyster Nature Notes</title>
-<div class="header">
-<h1> About Harold and Artemis Eyster's Nature Notes </> 
-</div>
-
-
-
+<link rel="stylesheet" type="text/css" href="../assets/about.css" title="about"/>
+<head>
+<title>About Eyster Fieldnotes</title>
 </head>
-<body>
-	<div class="row">
-		<div class="column"> 
-			<div class="image-cropper">
-		  <span><a href = "../assets/ame1.jpg"><img src="../assets/ame1.jpg" title="Artemis sitting high up in a White Pine" alt="image"></a> <span>
-			</div>
-		</div>
-		<div id ="column.side">
-			<div class="image-cropper">
-		  <span><a href = "../assets/HNE1.jpg"><img src="../assets/HNE1.jpg" title="Harold sketching in a White Pine" alt="image"></a> <span>
-			</div>
-		</div>
-		<div class="column.center">
-			<span id="slogan"> Artemis and Harold Eyster grew up on ten acres of wonderous land in SE Michigan. We spent our days climbing trees, watching birds, oggling at plants, and sketching everything.</span>
-			<div class="image-cropper-wide">
-			<span><a href = "../assets/AME_HNE1.jpg"><img  src="../assets/AME_HNE1.jpg" title="Sketching lupines " alt="image"></a> <span>
-			</div>
-		</div>
-		<div class="image-cropper">
-			<span id="slogan"> Now, nearly 3000 miles apart, this website allows us to still sketch together, vicariously. </span>
-			<span><a href = "../assets/AME_HNE2.jpg"><img src="../assets/AME_HNE2.jpg" title="Harold sketching in a White Pine" alt="image"></a> </span>
-		</div>
 
-	</div>
+<body>
+	<div id ="container">
+		<div id ="header"> 
+			<div id ="masthead">
+			<span><a href="http://fieldnotes.eyster.com/"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span>
+			</div>
+			<div id = "title">
+			<h1>About</h1>
+			</div>
+			<div id ="rmasthead">
+			<span><a href="http://fieldnotes.eyster.com/"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span>
+			</div>
+		</div>
+		<div id ="tcontent">
+			<div id ="nav">
+				<span><a href="../../../assets/AME_HNE2.jpg"><img class="crop" src="../../../assets/AME_HNE2.jpg" alt="image3"></a></span>
+			</div>
+			<div id = "main">
+			<p> Siblings Artemis and Harold Eyster grew up on ten acres of wonderous land in SE Michigan. We spent our days climbing trees, watching birds, oggling at plants, and sketching everything. </p>
+			<p>Now, nearly 3000 miles apart, this website allows us to still sketch together, vicariously. </p>
+			</div>
+			<div id ="rbox">
+			<span><a href="../../../assets/ame1.jpg"><img class="crop" src="../../../assets/ame1.jpg" alt="image2"></a></span>
+			<span><a href="../../../assets/HNE1.jpg"><img class="crop" src="../../../assets/HNE1.jpg" alt="image1"></a></span>
+			</div>
+		</div>
+		<div id = "icontent"> 
+		
+		</div>
+	</div>		
 </body>
+</html>
