fixing about alignment

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ layout: last
 <body>
 <div id="topContainer">
 <div id="topLeft">
-<span><a href="http://fieldnotes.eyster.com/about"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span>
+<span><a href="http://fieldnotes.eyster.com"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span>
 
 </div>
 <div id="topRight">
 <div id="masthead">
-<span><a href="http://fieldnotes.eyster.com/"><img src="../../../assets/profile.png" alt="Eyster picture" height="83" width="185"></a></span>
+<span><a href="http://fieldnotes.eyster.com/about"><img src="../../../assets/profile.png" alt="Eyster picture" height="83" width="185"></a></span>
 <span id="slogan">Sketches of the nature <br> we see around us.</span>
 </div>
 <div id="news">
