--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 				<span><a href="../../../assets/AME_HNE2.jpg"><img class="crop" src="../../../assets/AME_HNE2.jpg" alt="image3"></a></span>
 			</div>
 			<div id = "main">
-			<p> Siblings Artemis and Harold Eyster grew up on ten acres of wonderous land in SE Michigan. We spent our days climbing trees, watching birds, oggling at plants, and sketching everything. </p>
+			<p> Siblings Artemis and Harold Eyster grew up on ten acres of wonderous land in SE Michigan. We spent our days climbing trees, watching birds, lugging around Voss's 3-volume key to identify plants, and sketching everything. </p>
 			<p>Now, nearly 3000 miles apart, this website allows us to still sketch together, vicariously. </p>
 			</div>
 			<div id ="rbox">
