--- a/_posts/2018-04-02-33.html
+++ b/_posts/2018-04-02-33.html
@@ -3,9 +3,9 @@ layout: default
 title: April 2, 2018
 number: 33
 label1: Cardamine sp.<br> Vancouver, BC -- HNE
-label2: 
+label2: American Sycamore <br> Princeton, NJ -- AME
 image1: https://farm1.staticflickr.com/817/40532902374_f5846eb0d0_o.jpg
 mouse1: Mustards seem to be exceptional invaders -- why? 
-image2: 
+image2: /assets/sycamore.jpg
 mouse2: 
 ---
