--- a/_posts/2018-04-04-35.html
+++ b/_posts/2018-04-04-35.html
@@ -3,9 +3,9 @@ layout: default
 title: April 4, 2018
 number: 35
 label1: Canada Goose<br> Vancouver, BC -- HNE
-label2: 
+label2: Turkey Vulture <br> Princeton, NJ -- AME
 image1: https://farm1.staticflickr.com/900/41247558931_7b3d5458cd_o.jpg
 mouse1: Individual Canada Geese can be distinguished by the shape of the white cheek patch. I've seen this individual several times now. I call him Ralph. 
-image2: 
-mouse2: 
+image2: /assets/tuvu.jpg
+mouse2: Sunbathing 
 ---
