--- a/_posts/2018-04-03-34.html
+++ b/_posts/2018-04-03-34.html
@@ -3,9 +3,9 @@ layout: default
 title: April 3, 2018
 number: 34
 label1: <I>Lamium purpureum</I><br> Vancouver, BC -- HNE
-label2: 
+label2: Red and White Oak <br> Princeton, NJ -- AME
 image1: https://farm1.staticflickr.com/870/41203672572_c72303d49b_o.jpg
 mouse1: A cheerful patch of these grow right by the building where I work. Invasive, yet beautiful. 
-image2: 
-mouse2: 
+image2: /assets/oak.jpg
+mouse2: Tree tops' castaways 
 ---
