--- a/_posts/2018-04-05-36.html
+++ b/_posts/2018-04-05-36.html
@@ -7,5 +7,5 @@ label2: <I>Vibernum </I> <br> Princeton, NJ -- AME
 image1: https://farm1.staticflickr.com/794/41290113291_1d84330a9f_o.jpg
 mouse1: Foliose lichens are made up of a fungus--photosynthetic partner -- fungus sandwich 
 image2: /assets/vib.jpg
-mouse2: Sunbathing 
+mouse2: 
 ---
