--- a/_posts/2018-04-07-38.html
+++ b/_posts/2018-04-07-38.html
@@ -3,9 +3,9 @@ layout: default
 title: April 7, 2018
 number: 38
 label1: Golden-crowned Kinglet<br> Vancouver, BC -- HNE
-label2: 
+label2: Whtie Pine <I> Pinus strobus</I><br> Princeton, NJ -- AME
 image1: https://farm1.staticflickr.com/783/41344754431_429dcc8efb_o.jpg
 mouse1: Stop and listen to the twittering. Kinglets never dissapoint. 
-image2: 
+image2: /assets/pinecone.jpg
 mouse2: 
 ---
