--- a/_posts/2018-04-08-39.html
+++ b/_posts/2018-04-08-39.html
@@ -3,9 +3,9 @@ layout: default
 title: April 8, 2018
 number: 39
 label1: Creeping Speedwell <I>Veronica filaformis</I><br> Vancouver, BC -- HNE
-label2: 
+label2: Whtie Pine <I> Pinus strobus</I><br> Princeton, NJ -- AME
 image1: https://farm1.staticflickr.com/887/27457935038_07e39ceaa8_o.jpg
 mouse1: Everyone was out gardening today, but they didn't seem to notice the delightful weeds already brightening neglected lawns. 
-image2: 
+image2: /assets/pinetwig.jpg
 mouse2: 
 ---
