--- a/_posts/2018-04-17-48.html
+++ b/_posts/2018-04-17-48.html
@@ -5,7 +5,7 @@ number: 48
 label1: House Sparrow<br> Vancouver, BC -- HNE
 label2: Narrow-leaved Spring Beauty <br>Princeton, NJ -- AME
 image1: https://farm1.staticflickr.com/881/41534421132_9b2cc94fd8_o.jpg
-mouse1: Pen sketching: the abandon of indelibility 
+mouse1: Pen sketching -- the abandon of indelibility 
 image2: /assets/springbeauty.jpg
 mouse2: Shiny faces by the stream 
 ---
