--- a/_posts/2018-04-24-55.html
+++ b/_posts/2018-04-24-55.html
@@ -3,9 +3,9 @@ layout: default
 title: April 24, 2018
 number: 55
 label1: Brown-headed Cowbird<br> Lima Twp, MI -- HNE
-label2: 
+label2: American Elm <br> Princeton, NJ -- AME			
 image1: https://farm1.staticflickr.com/957/27881509488_3e6180e024_o.jpg
 mouse1: Brown head bronzing in the sunshine 
-image2: 
+image2: /assets/amelm.jpg
 mouse2: 
 ---
