--- a/_posts/2018-04-30-61.html
+++ b/_posts/2018-04-30-61.html
@@ -6,6 +6,6 @@ label1: Squamish Spring <br> Squamish, BC -- HNE
 label2: Lilac <br> Princeton, NJ -- AME			
 image1: https://farm1.staticflickr.com/982/41161397194_c7789e67b2_o.jpg
 mouse1: Big-leaf maples and aspen buttress the snow-encrusted rockfaces. 
-image2: /assets/robinn.jpg
+image2: /assets/lilac.jpg
 mouse2: Heavy fragrance -- pouring, falling, diffusing
 ---
