--- a/_posts/2018-05-02-63.html
+++ b/_posts/2018-05-02-63.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: May 2, 2018
-number: 63
-label1: Common Yellowthroat <br> Porteau Cove, BC -- HNE
+title: May 3, 2018
+number: 64
+label1: Vine Maple <br> Vancouver, BC -- HNE
 label2: Sugar Maple <br> Princeton, NJ -- AME			
 image1: https://farm1.staticflickr.com/909/40136502870_b8c9db5282_o.jpg
-mouse1: The Common Yellowthroats here have especially extensive yellow, reaching down past the chest 
-image2: /assets/dandelion.jpg
-mouse2: Waiting to dance free
+mouse1: The best part about moving somewhere new, is getting to see the new tree flowers! 
+image2: /assets/elmbranch.jpg
+mouse2: 
 ---
