--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Eyster Field Notes updates every day, unless we're in the field.
   {{post.label1}}
 	</div>
   <div class="column"> 
-  	<a href = "{{post.image2}}"><img src="{{post.image2}}"  title="{{post.mouse2}}" alt="image2"></a>
+  	<a href = "{{post.image2}}"><img src="{{post.image2}}"  title="{{post.mouse2}}" alt=></a>
 	<br>
 	{{post.label2}}
 	 </div>
