--- a/_posts/2018-05-19-80.html
+++ b/_posts/2018-05-19-80.html
@@ -3,8 +3,8 @@ layout: default
 title: May 19, 2018
 number: 80
 label1: Thimbleberry <br> Watcom, WA -- HNE
-label2: https://farm1.staticflickr.com/908/42201788432_a028ea1a37_o.jpg
-image1: 
+label2: 
+image1: https://farm1.staticflickr.com/908/42201788432_a028ea1a37_o.jpg
 mouse1: Promise of sweetness 
 image2: 
 mouse2: 
