--- a/_posts/2018-05-17-78.html
+++ b/_posts/2018-05-17-78.html
@@ -3,8 +3,8 @@ layout: default
 title: May 17, 2018
 number: 78
 label1: Broad-leaved Starflower <I>Trientalis latifolia</I> <br> Squamish, BC -- HNE
-label2: https://farm1.staticflickr.com/974/42138312252_2aed6e80b4_o.jpg
-image1: 
+label2: 
+image1: https://farm1.staticflickr.com/974/42138312252_2aed6e80b4_o.jpg
 mouse1: Climbing, sketching, and talking with friends in the sun. A good day. 
 image2: 
 mouse2: 
