--- a/_posts/2018-05-18-79.html
+++ b/_posts/2018-05-18-79.html
@@ -3,8 +3,8 @@ layout: default
 title: May 18, 2018
 number: 79
 label1: Mallard <br> Vancouver, BC -- HNE
-label2: https://farm1.staticflickr.com/961/27377595377_8d709e26e6_o.jpg
-image1: 
+label2: 
+image1: https://farm1.staticflickr.com/961/27377595377_8d709e26e6_o.jpg
 mouse1: Flashes of brilliant blue 
 image2: 
 mouse2: 
