--- a/_posts/2018-05-26-87.html
+++ b/_posts/2018-05-26-87.html
@@ -3,9 +3,9 @@ layout: default
 title: May 26, 2018
 number: 87
 label1: Red-winged Blackbird <br> Vancouver, BC -- HNE
-label2: 
+label2: Atlantic Puffin <br> Scotland, UK -- AME
 image1: https://farm2.staticflickr.com/1735/41555092235_47fd3a4b24_o.jpg
 mouse1: Surprised to see one still in non-breeding plumage. He also chased away other males in breeding plumage. 
-image2: 
+image2: /assets/puffin.jpg
 mouse2: 
 ---
