--- a/_posts/2018-05-27-88.html
+++ b/_posts/2018-05-27-88.html
@@ -3,9 +3,9 @@ layout: default
 title: May 27, 2018
 number: 88
 label1: Black-headed Grosbeak <br> Vancouver, BC -- HNE
-label2: 
+label2: Shellduck <br> Scotland, UK -- AME
 image1: https://farm2.staticflickr.com/1744/41781736814_ceae374f38_o.jpg
 mouse1: Nothing more comforting than a grosbeak's warble 
-image2: 
+image2: /assets/shellduck.jpg
 mouse2: 
 ---
