--- a/_posts/2018-05-24-85.html
+++ b/_posts/2018-05-24-85.html
@@ -3,9 +3,9 @@ layout: default
 title: May 24, 2018
 number: 85
 label1: American Goldfinch <br> Vancouver, BC -- HNE
-label2: 
+label2: Sunset <br> Scotland, UK -- AME
 image1: https://farm2.staticflickr.com/1745/42359393121_b2fe1fdccc_o.jpg
 mouse1: 
-image2: 
+image2: /assets/sunset.jpg
 mouse2: 
 ---
