--- a/_posts/2018-05-25-86.html
+++ b/_posts/2018-05-25-86.html
@@ -3,9 +3,9 @@ layout: default
 title: May 25, 2018
 number: 86
 label1: Sweetgum <br> Vancouver, BC -- HNE
-label2: 
+label2: Chaffinch <br> Scotland, UK -- AME
 image1: https://farm2.staticflickr.com/1740/40648681390_3c5b446de2_o.jpg
 mouse1: Cheerfully waving at me 
-image2: 
+image2: /assets/chaffinch.jpg
 mouse2: 
 ---
