--- a/_posts/2018-05-28-89.html
+++ b/_posts/2018-05-28-89.html
@@ -3,9 +3,9 @@ layout: default
 title: May 26, 2018
 number: 87
 label1: Euasian Collared-Dove <br> Boulder, CO -- HNE
-label2: 
+label2: Eurasian Oystercatcher <br> Scotland, UK -- AME
 image1: https://farm2.staticflickr.com/1749/41782478344_6ba3839406_o.jpg
-mouse1: Wherever you go, there are ECDOs 
-image2: 
+mouse1: Wherever you go, there are ECDOs. Though we're on different continents, we're seeing birds from the same! 
+image2: /assets/oystercatcher.jpg
 mouse2: 
 ---
