--- a/_posts/2018-06-05-97.html
+++ b/_posts/2018-06-05-97.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 5, 2018
 number: 97
-label1: Potentilla sp. <br> Gothic, CO -- HNE
+label1: Potentilla gracilis <br> Gothic, CO -- HNE
 label2: 
 image1: https://farm2.staticflickr.com/1729/41055814660_ae09ea9169_o.jpg
 mouse1: Suddenly, everything is decked out in yellow 
