--- a/_posts/2018-06-15-107 .html
+++ b/_posts/2018-06-15-107 .html
@@ -3,8 +3,8 @@ layout: default
 title: June 15, 2018
 number: 107
 label1: Scarlet Gilia <I>Ipomopsis aggregata</I> <br> Gothic, CO -- HNE
-label2: Masked Tityra <br> Gamboa, Panama -- AME
-image1: https://farm2.staticflickr.com/1788/42067150575_f7a314f660_o.jpg
+label2: Masked Tityra <br> BCI, Panama -- AME
+image1: https://farm2.staticflickr.com/1816/42067174105_f3ae99e0c1_o.jpg
 mouse1: Scarlet-gorgeted Broat-tailed Hummingbirds gorge on Ipomopsis 
 image2: /assets/tityra.jpg
 mouse2: 
