--- a/_posts/2018-06-27-119.html
+++ b/_posts/2018-06-27-119.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 27, 2018
 number: 119
-label1: Sedge sp. <br> Paradise Basin, CO -- HNE
+label1: Rush sp. <br> Paradise Basin, CO -- HNE
 label2: Fork-tailed Flycatcher <br> BCI, Panama -- AME
 image1: https://farm1.staticflickr.com/923/42190378015_b86196c41c_o.jpg
 mouse1:
