--- a/_posts/2018-07-08-130.html
+++ b/_posts/2018-07-08-130.html
@@ -6,6 +6,6 @@ label1: Gasteracantha <br> Coppock, IA -- HNE
 label2: Bauhinia reflexa <br> BCI, Panama -- AME
 image1: https://farm1.staticflickr.com/848/43654706901_315c6b2b78_o.jpg
 mouse1: Managing the mosquito population 
-image2: /assets/bao.jpg
+image2: /assets/bau.jpg
 mouse2:  
 ---
