--- a/_posts/2018-07-16-138.html
+++ b/_posts/2018-07-16-138.html
@@ -6,6 +6,6 @@ label1: Field Sparrow <br> Oregon, WI -- HNE
 label2: Blue-crowned Manakin & Ocellated Antbird <br> BCI, Panama -- AME
 image1: https://farm1.staticflickr.com/862/29785297048_db39be5874_o.jpg
 mouse1: 
-image2: /assets/bcman.jpg
+image2: /assets/bcman.jpeg
 mouse2: 
 ---
