fixing up through 9/17

--- a/_posts/2018-08-24-177.html
+++ b/_posts/2018-08-24-177.html
@@ -4,8 +4,7 @@ title: August 24, 2018
 number: 177
 label1: House Sparrow <br> Vancouver, BC -- HNE
 label2: 
-image1: 
-https://farm2.staticflickr.com/1889/30873111938_6f1144dd1b_o.jpg
+image1: https://farm2.staticflickr.com/1889/30873111938_6f1144dd1b_o.jpg
 mouse1: Wow, another House Sparrow. 
 image2: 
 mouse2: 
