--- a/_posts/2018-09-20-204.html
+++ b/_posts/2018-09-20-204.html
@@ -3,9 +3,9 @@ layout: default
 title: September 20, 2018
 number: 204
 label1: Golden-crowned Sparrow<br> Vancouver, BC -- HNE
-label2: 
+label2: Buckeye sp. <br> Princton, NJ -- AME
 image1: https://farm2.staticflickr.com/1939/44765032532_293925b3eb_o.jpg
 mouse1: With autumn come mixed flocks of juvenile sparrows, their complexity and individuality providing endless fascination and exhileration. 
-image2: 
+image2: /assets/buckeye.jpg
 mouse2: 
 ---
