--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@ layout: last
 <body>
 <div id="topContainer">
 <div id="topLeft">
-<span><a href="http://fieldnotes.eyster.com"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span>
+<span><a href="http://fieldnotes.eyster.com"><img src="../../../assets/masthead.png" alt="Eyster Field Notes logo" height="115" width="165"></a></span> 
 
 </div>
 <div id="topRight">
 <div id="masthead">
-<span><a href="http://fieldnotes.eyster.com/about"><img src="../../../assets/profile.png" alt="Eyster picture" height="83" width="185"></a></span>
-<span id="slogan">Sketches of the nature <br> we see around us.</span>
+<!--<span><a href="http://fieldnotes.eyster.com/about"><img src="../../../assets/profile.png" alt="Eyster picture" height="83" width="185"></a></span>v-->
+<span id="slogan">Sketches of the nature <br> we encounter around us</span>
 </div>
 <div id="news">
-Eyster Field Notes updates every day, unless we're in the field.
+<!--Eyster Field Notes updates every day, unless we're in the field. -->
 </div>
 </div>
 <div id="bgLeft" class="bg box"></div>
