--- a/_posts/2018-05-02-63.html
+++ b/_posts/2018-05-02-63.html
@@ -3,7 +3,7 @@ layout: default
 title: May 2, 2018
 number: 63
 label1: Common Yellowthroat <br> Porteau Cove, BC -- HNE
-label2: Sugar Maple <br> Princeton, NJ -- AME			
+label2: Dandelion <br> Princeton, NJ -- AME			
 image1: https://farm1.staticflickr.com/909/40136502870_b8c9db5282_o.jpg
 mouse1: The Common Yellowthroats here have especially extensive yellow, reaching down past the chest 
 image2: /assets/dandelion.jpg
