--- a/_posts/2018-05-03-64.html
+++ b/_posts/2018-05-03-64.html
@@ -3,7 +3,7 @@ layout: default
 title: May 3, 2018
 number: 64
 label1: Vine Maple <br> Vancouver, BC -- HNE
-label2: Sugar Maple <br> Princeton, NJ -- AME			
+label2: American Elm <br> Princeton, NJ -- AME			
 image: https://farm1.staticflickr.com/907/28138595878_5e634e3050_o.jpg
 mouse1: The best part about moving somewhere new, is getting to see the new tree flowers! 
 image2: /assets/elmbranch.jpg
