--- a/_posts/2018-05-15-76.html
+++ b/_posts/2018-05-15-76.html
@@ -2,7 +2,7 @@
 layout: default
 title: May 15, 2018
 number: 76
-label1: Wisteria <br> Bowen Island, BC -- HNE
+label1: Wisteria <br> Vancouver, BC -- HNE
 label2: 
 image1: https://farm1.staticflickr.com/952/41433743384_2e7d3a5caf_o.jpg
 mouse1: Filling the evening air with sweetness 
