--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: last
 <span id="slogan">Sketches of the nature <br> we encounter around us</span>
 </div>
 <div id="news">
-<!--Eyster Field Notes updates every day, unless we're in the field. -->
+Eyster Field Notes updates every day, unless we're in the field. 
 </div>
 </div>
 <div id="bgLeft" class="bg box"></div>
