--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ layout: last
 <div id="topRight">
 <div id="masthead">
 <!--<span><a href="http://fieldnotes.eyster.com/about"><img src="../../../assets/profile.png" alt="Eyster picture" height="83" width="185"></a></span>v-->
-<span id="slogan">Sketches of the nature <br> we encounter around us</span>
+<span id="slogan">Sketches of the nature <br> we see around us</span>
 </div>
 <div id="news">
-Eyster Field Notes updates every day, unless we're in the field. 
+<!--Eyster Field Notes updates every day, unless we're in the field. -->
 </div>
 </div>
 <div id="bgLeft" class="bg box"></div>
