--- a/_posts/2018-11-19-264.html
+++ b/_posts/2018-11-19-264.html
@@ -2,9 +2,9 @@
 layout: default
 title: November 19, 2018
 number: 264
-label1: Glaucous-winged x Western Gull <br> Vancouver, BC -- HNE
+label1: High Bush Cranberry <br> Vancouver, BC -- HNE
 label2: 
-image1: https://farm5.staticflickr.com/4812/32458594368_2786a6f70a_o.jpg
+image1: https://farm5.staticflickr.com/4901/46280393782_d2ef105aac_o.jpg
 image2: 
 mouse2: 
 ---
