--- a/_posts/2018-12-21-296.html
+++ b/_posts/2018-12-21-296.html
@@ -2,9 +2,9 @@
 layout: default
 title: December 21, 2018
 number: 296
-label1: Flowering Dogwood <br> Washtenaw, MI -- HNE
+label1: Tufted Titmouse <br> Washtenaw, MI -- HNE
 label2: 
-image1: https://farm5.staticflickr.com/4912/32526330068_8613856fb3_o.jpg
-image2: Still red. 
+image1: https://farm5.staticflickr.com/4876/32553042688_b04d9d4d00_o.jpg
+image2: 
 mouse2: 
 ---
