--- a/_posts/2018-12-10-285.html
+++ b/_posts/2018-12-10-285.html
@@ -5,6 +5,6 @@ number: 285
 label1: Northern Goshawk <br> Vancouver, BC -- HNE
 label2: 
 image1: https://farm5.staticflickr.com/4842/45485842845_37b47f571a_o.jpg
-image2: This is the reason I go to work: so I can see goshawks out my window. 
+image2: This is the reason I go to work -- so I can see goshawks out my window. 
 mouse2: 
 ---
