--- a/_posts/2019-01-11-317.html
+++ b/_posts/2019-01-11-317.html
@@ -3,10 +3,10 @@ layout: default
 title: January 11, 2019
 number: 317
 label1:  Bald Eagle <br> Vancouver, BC -- HNE
-label2: American Elm <br> Princeton, NJ  -- AME		
+label2: 	
 image1: https://lh3.googleusercontent.com/7hyAjsAe3VdMJNBvUs4gkw5Cn91ey_zarsP8INLfXBTaYsGfB_FEXZd3mPRnGjdKPAJ27gQKZAR_C-euHLyl6rMC22IZxobR5gOr5xotRNAMbiE3xSWJLy5zvooEd-nrPWnBjYwoBA=w2400
 mouse1: One of the most common office-window birds 
-image2: https://lh3.googleusercontent.com/awv-vmYIAF2li9eLXvsdu8AgeSRzekN7tsS3gBuVf12ZBC5PSOTDp7WWWHMCDZNcqGAPy23QMcWbqKVtrp6tnhe-D-B1jDUFg8YG_IXQVGjBzheT1ODpZdPUDhHCfPFq46eZsLdquA=w2400
-mouse2:  Frozen broken promises 
+image2: 
+mouse2:  
 ---
 
