--- a/_posts/2019-01-16-322.html
+++ b/_posts/2019-01-16-322.html
@@ -2,11 +2,11 @@
 layout: default
 title: January 16, 2019
 number: 322
-label1: "Olympic" Gull" <br> Vancouver, BC -- HNE
+label1: Olympic Gull <br> Vancouver, BC -- HNE
 label2: Magnolia twig <br> Princeton, NJ -- AME 	
-image1: https://lh3.googleusercontent.com/orxHxESsWRJO_XZfu2z4xxfUrDMibf0yNGnuXdBcjftpcyDRAYwVHcWnF8_ZQX6TwYCBiSUQDk8Dh03C6tjcgAVe8Z5cAZTS4qDbI78ygepynkR6-NAAXhcF8CSLImN_aS_RK6kTsA=w2400
+image1:  https://lh3.googleusercontent.com/orxHxESsWRJO_XZfu2z4xxfUrDMibf0yNGnuXdBcjftpcyDRAYwVHcWnF8_ZQX6TwYCBiSUQDk8Dh03C6tjcgAVe8Z5cAZTS4qDbI78ygepynkR6-NAAXhcF8CSLImN_aS_RK6kTsA=w2400
 mouse1: Apparently sweetgum looks like a mussel? 
-image2: https://lh3.googleusercontent.com/TfXSvsk9yf-sH40CPvx3cq67ZxXdwPDFdO2e4EsW_8_rjU-qfcoMUKAJFVRcXjex3ZT_K6Y_l-uvDOkP6RL2epSc1PgNq0S0V_tcQhUj3r8khGsHDDD0E-2WL5_2Po3yn_PMd0Tsnw=w2400
+image2:  https://lh3.googleusercontent.com/TfXSvsk9yf-sH40CPvx3cq67ZxXdwPDFdO2e4EsW_8_rjU-qfcoMUKAJFVRcXjex3ZT_K6Y_l-uvDOkP6RL2epSc1PgNq0S0V_tcQhUj3r8khGsHDDD0E-2WL5_2Po3yn_PMd0Tsnw=w2400
 mouse2: Broken and tossed by winter winds  
 ---
 
