--- a/_posts/2019-02-08-345.html
+++ b/_posts/2019-02-08-345.html
@@ -5,8 +5,7 @@ number: 345
 label1: Horned Grebe <br> Vancouver, BC -- HNE
 label2: Holly  <br> Princeton, NJ -- AME 
 image1: https://lh3.googleusercontent.com/1wvV6pf0XAjXFuYNpuDE506exnyMjD-zlSy8tFVpPDWnvbyj3dEvES1cZxwKFkHHciaGIZJXIOLjoHF24iJ99qldwzoGePRN1H73cnL-suijHhinCvGLXAaNlOhCcEbAAlStk5ZbNg=w2400
-mouse1: These birds are hard to draw: they seem to spend all their
-time under water.  
+mouse1: These birds are hard to draw -- they seem to spend all their time under water.
 image2: https://lh3.googleusercontent.com/7rTbkMLzoyCaJ2w6_-NfQ_VB4qhEKB-ia7WCUg0KRhV_Tgwi2kgPuoX7dthaexa-lxIaXcKtPsIy5YrZuVpEKJP0_50uuunLNSJ50NB-jTSVS5-qpExZ-_aLTmiazVavCecOKssy5g=w2400
 mouse2: Sharp points and sharp hollows
 ---
