--- a/_posts/2019-02-13-350.html
+++ b/_posts/2019-02-13-350.html
@@ -5,8 +5,7 @@ number: 350
 label1: Black Scoter <br> Vancouver, BC -- HNE
 label2: 
 image1: https://lh3.googleusercontent.com/gAXKfdA8XfMzZIY0ZYaFz577Y2k_1ganDIM2TC80HiqN7mX0zbCZTrN4gFok5pTcnetFboM6NopOcaOt_5vsLqiC2_8EaR-VKKXb4deH5Vo75VCDJJ_udVRBY_WNlkLWWngZc706bw=w2400
-mouse1: Growing up in the interior, I'm always excited to see these
-salty mariners  
+mouse1: Growing up in the interior, I'm always excited to see these salty mariners  
 image2: 
 mouse2:
 ---
