--- a/_posts/2019-02-21-358.html
+++ b/_posts/2019-02-21-358.html
@@ -5,8 +5,7 @@ number: 358
 label1: Common Raven <br> Whistler, BC -- HNE
 label2: 
 image1: https://lh3.googleusercontent.com/scqqT0s1Qppgbs9qQO8nt3fPdd9_ZZIGX_-8Hy4RvHsY2eYHQnrVc1llM0mdOky7Sn9C05O8aN_JnD3gHxzuGk_cnFtCvyBkIXIziMjtJ5tjjr0FSdtxr3MsI0tlFaSZu5QOCWEmBg=w2400
-mouse1: Perhaps the second best part about going skiing is being able
-to see sooooo many Ravens  
+mouse1: Perhaps the second best part about going skiing is being able to see sooooo many Ravens  
 image2: 
 mouse2:
 ---
