--- a/_posts/2019-02-24-361.html
+++ b/_posts/2019-02-24-361.html
@@ -4,9 +4,8 @@ title: February 24, 2019
 number: 361
 label1: Mosses <br> Vancouver, BC -- HNE
 label2: 
-image1: https://lh3.googleusercontent.com/f_vrgi7cnkhpGY-RWvYw1N5Pr2lmm7fqm3vmgobI1SZLPgmKktAMMRHbN-iNq9jiNRq6pzJ-F74c3NeOG59d0mAebMBI9II79U-h_jCw0LHp0gSxNLH8cMRze4nSy3oPQ48cgep_Dw=w2400
-mouse1: Clinging to the edge of Quarry Rock, I find these three moss
-species. I cling, too, as I try and sketch their uniqueness.  
+image1:  https://lh3.googleusercontent.com/f_vrgi7cnkhpGY-RWvYw1N5Pr2lmm7fqm3vmgobI1SZLPgmKktAMMRHbN-iNq9jiNRq6pzJ-F74c3NeOG59d0mAebMBI9II79U-h_jCw0LHp0gSxNLH8cMRze4nSy3oPQ48cgep_Dw=w2400
+mouse1: Clinging to the edge of Quarry Rock, I find these three moss species. I cling, too, as I try and sketch their uniqueness.  
 image2: 
 mouse2:
 ---
