--- a/_posts/2019-03-12-377.html
+++ b/_posts/2019-03-12-377.html
@@ -3,9 +3,9 @@ layout: default
 title: March 12, 2019
 number: 377
 label1: Common Raccoon <br> Vancouver, BC -- HNE
-label2:
+label2: Ash <br> Princeton, NJ 
 image1:  https://lh3.googleusercontent.com/j3XmvGCJjmB65YU6fnPHbYVJERFs09sIRNpmIq21Xexm_D58Yi3E6tJhaoc00TpAPEPhKm3mzOHj5Bk92HcV9DE5RQqbd0_XPSfftCitJjQwtvsyvDUi-DFN86gkco2YOHyXlrL0tQ=w2400
 mouse1:  Wildness endures 
-image2: 
-mouse2:
+image2:  https://lh3.googleusercontent.com/CWdYdjYadQaA5Y12eoYqYibhNZXKJKiZEFMzKcn-kFim_TOGyr8Spjqs8G548s68qhUXLpJRUMk9AcLnFe26WE1hDKc57YGS0XGtMx87QRD2lnwalbwpUqyDsFny_hSr_ie9hQsZBQ=w2400
+mouse2: Lichen and angles add beauty 
 ---
