--- a/_posts/2019-03-17-382.html
+++ b/_posts/2019-03-17-382.html
@@ -3,9 +3,9 @@ layout: default
 title: March 17, 2019
 number: 382
 label1: Merlin  <br> Whistler, BC -- HNE
-label2:
+label2:  Weaver nests <br> Nanyuki, Kenya -- AME 
 image1: https://lh3.googleusercontent.com/qcxu1gDICNuPONtOT80SK9E7AnJmsCf08VXHDKsbmVhdj-QHo7ucTrYK-Q5wt1cuR8hYDzMglqXu0m562C3GIbWP-_GtV9tzCMjHwNvEdMPpCTngd1v3lQDud9XbjW0v3_O1_e82ww=w2400
 mouse1:  Guarding the wallet that I left on top of the car. 
-image2: 
+image2:  https://lh3.googleusercontent.com/HV_6Vnb0fcgcuBbLbNOYwNBneedyJJJF9NxIOgOu9gAbcAWCU4ZcWe0J6IQtUy3ZvNgLbBVVYzMjzrrXIfPyWci_-b2LQi97mIJ62xzcJ01wfLdOcOSIWFRD7jIqrxC-mxa67fMJvQ=w2400
 mouse2:
 ---
