--- a/_posts/2019-03-18-383.html
+++ b/_posts/2019-03-18-383.html
@@ -3,9 +3,9 @@ layout: default
 title: March 18, 2019
 number: 383
 label1:  Green-winged Teal <br> Vancouver, BC -- HNE
-label2:
+label2: Long-eared Kenyan rabbit <br> Mpala Rsch Ctr, Kenya
 image1:   https://lh3.googleusercontent.com/4-dGA6Y-QqJdoDz58qLTa0mgpTrtgUBmW1YuMqxFwVgeAWxkI5aWgoLmJzATSIGc0rR6KABtfwvnU2tEJGNv-NaDiamhSxwXVeRGzr5kvZfHgE1yxjyYa80fJN0AKMEKyKAuc_RNwg=w2400
 mouse1:  These ducks are so stunningly small 
-image2: 
-mouse2:
+image2: https://lh3.googleusercontent.com/K4RuynlSOgJ3iW1L3ZfydAO5Y9kwpw78hnHdCLfmsyT5NKGpOikH3Hfao5jVpO3dS-skVujc_TMB21jqam7LWsH5SZxH3MrDYes2tOV3wM0Sj3GvHykR6v5x2KAJqQ9Z4HV254TggA=w2400
+mouse2: I don't know the real name 
 ---
