--- a/_posts/2019-03-20-385.html
+++ b/_posts/2019-03-20-385.html
@@ -3,9 +3,9 @@ layout: default
 title:  March 20, 2019
 number: 385
 label1: Wood Duck <br> Vancouver, BC -- HNE
-label2:
+label2: Vulterine Guneafowl <br> Kenya -- AME 
 image1:  https://lh3.googleusercontent.com/JuUxSA5v2uMap-J3sE3D_y69yXnuVOKpuu8oHI-RciGWnW-fOGBJFuHfmNDJBPu1jEUpFfulEZkGNSnkJqUGftcoyaapUKu2ogNbOBrsdIK_eMRJs5Twb4tquAoNXD7FPFd1b6a-Xw=w2400
 mouse1: What does the duck say? Definitely not quack.
-image2: 
-mouse2:
+image2:  https://lh3.googleusercontent.com/rrXkzEIwSTxWj60cJXL0ay6qnfeS_u4PR0MP1IOIdyx_PQmR4_cBzmVirz24peFbN4WMY0ili3TvrEROAN5Fv8tzfZa42w3I2veJ_xPrtL6Tit2UiTtIjxurIrmmca2GCYGBHnPw8Q=w2400
+mouse2: At Mpala Research Center 
 ---
