--- a/_posts/2019-03-25-390.html
+++ b/_posts/2019-03-25-390.html
@@ -3,9 +3,9 @@ layout: default
 title: March 25, 2019
 number: 390
 label1:  American Crowe <br> Toronto, ON -- HNE
-label2:
+label2:  American Robin <br> Princeton, NJ -- AME 
 image1:  https://lh3.googleusercontent.com/L3qgtld1Mc8C0J91kz-LGvtm4skE7IlkP7ekcjlKVDduMsQ6NQj21egSdlzfNHSbfuZxXhHFHO0aZQhSXwqpehrgl-edMYWfII37I97subbstruIOu8nC0Lrgca0LA368GkVP2CM4Q=w2400
 mouse1: Avian airplanes 
-image2: 
-mouse2:
+image2:  https://lh3.googleusercontent.com/UhJxdh2SBgC2e0pgHQNzyov_nRHdpmb0gQS5vWrJAfRNTm7hbVuFNW6bnlefmHxEkRDGt00NHTqJh7DT1vMip6W8jIvv5tH8i7zq8qDxcyL5Bdaurl5bCB-9qZauZrWPDElJpTSEJg=w2400
+mouse2: As I watched three robins I saw a red fox.
 ---
