--- a/_posts/2019-03-11-376.html
+++ b/_posts/2019-03-11-376.html
@@ -3,9 +3,9 @@ layout: default
 title: March 11, 2019
 number: 376
 label1: Canada Goose <br> Vancouver, BC -- HNE
-label2:
+label2: First blossom <br> Princeton, NJ -- AME 
 image1:  https://lh3.googleusercontent.com/RIQCm6KX5omH1sbYqbRAoSAQAkjmO1EFG134TXbh1oTN8PsaPYeEwAhliXOA1WURiAjZ5M05D0a2F6gjceVz-Hi1_zvxjFelPIt3A8NPFvg3Yeu5KbLp8LH2rJFg2gq27w5NM5bS2Q=w2400
 mouse1: I wonder why they have this head shape. Perhaps to aid in their backwards vision.  
-image2: 
-mouse2:
+image2:  https://lh3.googleusercontent.com/b8u8t9yO7JJUhnlPkBIvE_Z8OTdZ1MSk5sIfVBuEViH1C2ezj5SxK-nXFBN3DOxfDdSRb_jQrsEvINbIyiYOXzxinhdeqAYGlIP7g64sBcdp3xZdQUidj0BcEpFpIX069Xllwr1YrQ=w2400
+mouse2: Little mustard friend 
 ---
