--- a/_posts/2019-03-19-384.html
+++ b/_posts/2019-03-19-384.html
@@ -3,9 +3,9 @@ layout: default
 title: March 19, 2019
 number: 384
 label1: Olympic Gulls <br> Vancouver, BC -- HNE
-label2:
+label2: Red-cheacked blue-brown finch <br> Kenya  -- AME 
 image1:  https://lh3.googleusercontent.com/DLMSv_o_ZNHOvFdX8hq3ymFUDhLe9l6lbxniHPU8AtYok_p74jA3K8pyWA2mR-VFHUMyINW3I1rjscRt1ef2Im5lg3y00JqS0kt4_Qep9QuA9I4DMi_-yMBCNJUmVq7RZd5yLQMk4A=w2400
 mouse1: They make look like carefree gliders, but a chase is on. 
-image2: 
-mouse2:
+image2:  https://lh3.googleusercontent.com/FkmvSgTGjhVjpqNRPUr8nIp15Swlv-AZIkTfOgi9hV1qe8MtHrBpquUE5LBBP2-4vPWpGJg5fgkXfCnVWjk6bd4D7lGbsS91IDi9zVHjBPykJVyJRJ6DYHDLJ9CiTaDS3WZFSO2Z7A=w2400
+mouse2: Official name tbd.
 ---
