--- a/_posts/2019-03-26-391.html
+++ b/_posts/2019-03-26-391.html
@@ -3,9 +3,9 @@ layout: default
 title: March 26, 2019
 number: 391
 label1: Eurasian Jackdaw <br>Cambridge, UK -- HNE
-label2:
+label2: Magnolia <br> Princeton, NJ -- AME 
 image1:  https://lh3.googleusercontent.com/YXIyHvjejzjotuGJ-_9psVl-N3uJk5OvoYuQlLE-fR4BZrldyxhxD33m00mTwKPuVqakmnq9S5RCDCXNbNaD_G233XRU5C4AWRU9vSWbsXSC7jv_vcUfW-no3jukEbZhE3LcEwrsnQ=w2400
 mouse1: Such incredible eyes  
-image2: 
-mouse2:
+image2: https://lh3.googleusercontent.com/7xnkf6GsofjmzbcLEYzRmx64NlWEAdvxWw3PmvEqz9EgOcsuJE9fs0qF7MNtP98CfF-59b3p19zP1ClEGbIpqIOC4FzObln4c8-StSo5hT63D8GG4mlQW82ar49VXsHsjzQksK9N2w=w2400
+mouse2: Sweet smelling. I sat below the blooming tree in the sun.
 ---
