--- a/_posts/2019-03-31-396.html
+++ b/_posts/2019-03-31-396.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: April 01, 2019
-number: 397
-label1: Snow Finch <br>Zurs, Austria -- HNE
-label2: Slate-colored Junco  <br> Princeton, NJ -- AME 
-image1:https://lh3.googleusercontent.com/BGelAPANSb0e335DuW3QkYG3dhgcTc-aUf_2mQq6sOtp5NWbV3u2glcoWbqr9pfJ3troxCWXbE-rOyzsvUkt4nDvi2vpdL17zRiKmATjVjpHvqnjuRleD4jhh1RYcSGNkizsETjNPJveQYXYcoVq6LaG9qbSmCgavO45NM7SaHmGp9NXjK_CNokV2t6b5reHUGXHvPsW3x9SJxoUa4MiZIKPNENagm5rBqh3jNGt-7s-1PV_K4H6DanMW2UA3KuQYm7fKIDAP1oP3jgzBoeo4JWd5aSOJLfjoTCJF6ftp9NunmIXFAq5nnzhQqN_n_9LQrcfVe85RaHfLS-0uyBfcOwd9V4IxWarSxjsW6mCBxG3VUeb7V0p08A-j1aaGb1B5GUYwYrQ_vjlyjzMUoz1L39xVbOpKM871vYYhUDWu6rR0CXJO0rBMyd55H0z7Nym8onDkZTyAgTi0uifoREZTtBLnDyLLsPPxmaxlley9dllg75viC4R9UUfCmghoJywEMku1s7krfQjRuoaFNsJAonkbSfbchSol-IK-9Hswkxt5mcOBXSLY5YTQrQXjsWiaiCjyWnbG1geEbLZOmaNs3ph4BzPvlGZlaoYCveUEkKjpOzyr7XhclGxOWCh75KVeftnXQSwxf2rJNS8jdpmlsvM0UH-fsGxCEYdHh1GFyRjAgS1dE93CWNiBvx4LgrXuRqw_L6hNeUg9TUvySdIQKZT=w822-h722-no
+title: March 31, 2019
+number: 396
+label1: Coal Tit <br>Zurs, Austria -- HNE
+label2: Seeding Mustard <br> Princeton, NJ -- AME 
+image1: https://lh3.googleusercontent.com/dqr66ejyqhEyOCo0-xY3ufGxwFrcg4HoOIbInuzFtqcSJXHrfVn-Vaqfr_4EZC0gUk9WFYwUbqnobTI5kn_HactYM7gMDZWsLfHV1B4q0Vgzo-c3wfMeop-hluHev4xs89TvZxa78w=w2400 
 mouse1: 
-image2:  https://lh3.googleusercontent.com/fN2bdMdRPE9XX1CPXI4crlBOLHCvw5YPyUF3UgQUAUlzdGVypnoBfQBMoxhoiawfwSYIkz8jETc4kLtRWLZWMhiTAh9eWdcP3ocyg0HGpUeB6GQ-sUsls5hrjnzOyIzgJrpnPMavylNd3TYLYaWgJ0MpyewKdfTn3PA5knRshcea_ZjV-7Rien6bi-0nGuhrmsAgnq_tNj0SSiUQxqD7Dv6acdUKBKNa84TTY7lB1EsRkP4ZTUXznpVkS7J_4V4Qr436iRmgM_yeBmBWHDSl5MNN6zpR46b2rLEBAt47Ce0zVUfiynzAE8FNzFMAcpZbaMkoC53OuQNzXCIvZwlw4Ycpc7rWGbmNRxTH0eIOpUsS2NJo2cyyTMfnLt2c9mpQgsV_uulDPz2tb29Cp8v6-4G2kcdYElaLkUK8Cf_OFT2OB0C3I_EI8U7_15S1tPPzyGADRgb_bCsnM0o9dDe0codWjc-FZrThND_VjWbZVAmbTKCZspv0M0g7WWTgdaNeMSCpwWnjUp-4pcTOuGbrJOpYT90Pkomhw-toyLtR7mZEG9kxrDao4e-YXfWDwCdOml6QnwYFyiPaphCCKFMEOzxRKCP3N1dRuEp5syuaFg0iy32UaAVK909spgyW_3F17VRoXck528rxck0W3KlaTR_dfRMtu2766yu1VNSLDSjbpbwKrd4KXWgrPbJ1acpbDj-sLt8XlflZ7wFcsgG4U4xT=w695-h926-no
-mouse2:  In a White Pine
+image2: https://lh3.googleusercontent.com/MA2A_Hstf0430zKZCwwqup8EyPgjiWjG36DCs18DW184aHmwXXvstXPsaI4trh5hB2dA-JyH2PQlRQEnzwzQTodbvzUeEbSqJ7_EXAxIUQOu1vTPE-DVLaGuv_AsSEAqUfd1qVa1FA=w2400
+mouse2: 
 ---
