--- a/_posts/2019-04-23-419.html
+++ b/_posts/2019-04-23-419.html
@@ -2,10 +2,10 @@
 layout: default
 title: April 23, 2019
 number: 419
-label1: Oval-leaved Mitrewort <I>Mitella ovalis </I > <br>Vancouver, BC  -- HNE
+label1: Black Oakt <I>Qercus velutina </I > <br>Vancouver, BC  -- HNE
 label2:  
-image1:  https://lh3.googleusercontent.com/BXwbABoujKYXr25adiE-disdNsILHLu3Umfg0pA0iwGLhCTSXvec5H5znSYtEKSUjrCZJH1xQYujORhN8riWt8xNQdoLoyNf6-utNVJP3vqynqKDVhqh3rOjMMOwVNuMQFHaTpCdHg1X3ANo3pF1rC_GQinD7IYKmrgdd6fEiFvzsn8u7DtHarWX7aHntEQvi3VJ_qRZ-mXFwNGob65D0vmCFORJmdc8-OhLesQFgYLt-n0FD85vdjTWgPaBagGbpn-4hqpw9bFiC1DUDCdr2IMHhkeNnX92V7lEIE3GuSRMbpEtC08KZpxPNobhirdIVt7C_7tUghEkDd1SPQGxCM3lTLJ8nVmhPV-FpxIa04879yhhTcffPR9AUVzmbOG5YxuL18O_ecFfnQbq0lufpE2fpS0kMUGFmYHH9ADy-HpyR8bOPbo1Mi3fb7WEcguZcpgP2oCuuVWVmkEPvD8HgCGAX6HRiVgbiBIk-pXX5m2g6fdq5CHWxgLzfdG6-NstYa5jDU8Q0JXv3hITpIkPU0KOSZTsjq0sPrF6DVYnkZbs-L8TD0bXjdpUO5J9qNOTDhX8Idsp4-Yy3All9gSmPmIJ8k19qqV5Z0734XNKaGCkpT2a1TyDXWesEr-3dZOcALwSweJMG_yLHlGc5rpDkf7JrjsKl5A=w750-h975-no
-mouse1:  Latin mitra comes from Greek for "girdle", "headband", or "turban"
+image1: https://lh3.googleusercontent.com/P3NWD5vQVjXfxIQu9O9nMZJytZ8KfV9qzbaJOCF-5knr7hLwGqOcvypD0xZ4r0OZitOd6gEti4ryPMIpRapoEVKdLxYDK4u9QlTBhsBCfcVEa4ukGWcOa802ONuoDbXJKJxXGeny61OCvAqfbamxI6HG5qtC-LztNgtSbcWncyLE_mxUyGSJNdzN4c2Xtwtz2m1CLAsHApUWO4AxbnsoX7Qak5FYmj5ir0tdCDKiOqm61Jg02XM9LAwNAE_OIISET8EgnCJWn-2mE6hJxSPw3Z9Z96TPl7yDqiUcAqK1Jzu4qUbkHIprPW-y2TIPfyEbfDC0c7RyYHWY-Zfjf8NkLsbN6Zs2KYkDxepvUfSva6rteEOxXr3fCpuVJPqj9luH_T3HsDJi-cxwI45z1eb95CP8jP8Tz1TSuyBaaqDK8neahnIAeD8ywvjps1q9YBT1jfk9BKM6iLgRZIm7Hu6v9X_ClEcC9JkPX0OKg5gXlzOZtrZ37isT9KqqTQJQFV-CLDMfQ-VSc0xixB6SXuZp8XdMeJDT95eJTEVHebiZ4fbdXVANduKybS2I8p1DRUvf5uSeic-Hlu3uKcvtFUTxiktEDy5S0WNFf1r1elLvOwLC7ABOMD1gcC1SxrHIqTqK6tKiGvA9vS1odtEbr9wp2gY7h3XYSBEkKrOFjTUk0bbT2UwiDg4biGSIJc6HVgQQfCqu5LrLcRZ49vHEu4LErTeZ=w732-h975-no
+mouse1:  Where acorns come from 
 image2: 
 mouse2: 
 ---
