--- a/_posts/2019-04-24-420.html
+++ b/_posts/2019-04-24-420.html
@@ -2,10 +2,10 @@
 layout: default
 title: April 24, 2019
 number: 420
-label1: Christmas Fern <br> Vancouver, BC  -- HNE
+label1: Japanese Maple <br> Vancouver, BC  -- HNE
 label2:  
-image1: https://lh3.googleusercontent.com/bocurJXz_RUH_Zbh2mYXZKQtLrItJA-lD5nAdQ8H7fqPuOlRlPhdJazRjzAbZNcJF10V3naq-1yu9f3uKWjN3avDdYVggqnHp-uxzFlTWXBXoX5tKWRa1TaPJSDvVGouo2ejuzE7cGpC_IUMMV7ZrC4HIUoP7EU4ogPlTSVAQIfCdmB3URFhEqyTLtyxsYINc30BO489RHrtC9kt2PkaoQO3_Yc2cw-Nd_hb42Aot641wc5Oxf_gpMUXxRjUf_qHXLv-rUi1an3OEXtyJU_QiZEjb4fJOYJhFGAUjqOmrJvt-G1BcRH4YvQ7-9czVHg6La-Hf6B9E_x2v6vGnZC9SjrE_3FxKOv3yrTkyIwgDWXdO7yg0N-u7h6hibGOYYMF8OXRTnZ2PUC0qfw9l3q0c-pHWgy94ZFM3G4sXaj6Dn_drKIqp311rb1-XE70wsC_he9XgR1L84Ki3S_k5jNZJnFMif4rIQmgkr_PpInWKcCxiypanW6diYKIDxZg0c9h7uYUvnd2nOak-DMcEEKOSFWwU9VTSfF_HkllTcwZAyTgtvkuoa2gHeuBrvhiwfsnvm2z3eTqJRHULTuRvHCrKmV8zvUngKJNQv6JZkyw96EEizkPuvocE1syxIDIBxKPwqP5Ggid20_bH9VdtFlSkF7fJqeJZ-A=w587-h975-no 
-mouse1:   Still light green. Soon it will be a rich evergreen. 
+image1: https://lh3.googleusercontent.com/P3NWD5vQVjXfxIQu9O9nMZJytZ8KfV9qzbaJOCF-5knr7hLwGqOcvypD0xZ4r0OZitOd6gEti4ryPMIpRapoEVKdLxYDK4u9QlTBhsBCfcVEa4ukGWcOa802ONuoDbXJKJxXGeny61OCvAqfbamxI6HG5qtC-LztNgtSbcWncyLE_mxUyGSJNdzN4c2Xtwtz2m1CLAsHApUWO4AxbnsoX7Qak5FYmj5ir0tdCDKiOqm61Jg02XM9LAwNAE_OIISET8EgnCJWn-2mE6hJxSPw3Z9Z96TPl7yDqiUcAqK1Jzu4qUbkHIprPW-y2TIPfyEbfDC0c7RyYHWY-Zfjf8NkLsbN6Zs2KYkDxepvUfSva6rteEOxXr3fCpuVJPqj9luH_T3HsDJi-cxwI45z1eb95CP8jP8Tz1TSuyBaaqDK8neahnIAeD8ywvjps1q9YBT1jfk9BKM6iLgRZIm7Hu6v9X_ClEcC9JkPX0OKg5gXlzOZtrZ37isT9KqqTQJQFV-CLDMfQ-VSc0xixB6SXuZp8XdMeJDT95eJTEVHebiZ4fbdXVANduKybS2I8p1DRUvf5uSeic-Hlu3uKcvtFUTxiktEDy5S0WNFf1r1elLvOwLC7ABOMD1gcC1SxrHIqTqK6tKiGvA9vS1odtEbr9wp2gY7h3XYSBEkKrOFjTUk0bbT2UwiDg4biGSIJc6HVgQQfCqu5LrLcRZ49vHEu4LErTeZ=w732-h975-no 
+mouse1:  In the fall, the leaves are a glorious read. Who knew the flowers were so brilliant in the spring?  
 image2: 
 mouse2: 
 ---
